busca por geolocalização

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,17 +8,28 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-md="6" offset-md="3">
-        <ion-searchbar 
+        <ion-searchbar
           placeholder="Qual a sua cidade?"
           #searchInput
           (ionChange)="onSearch(searchInput.value)"
           debounce="500"
         ></ion-searchbar>
+        <ion-button (click)="onGeolocation()" fill="clear"
+          >Meu Local</ion-button
+        >
 
-        <app-error-message *ngIf="errorMessage" [message]="errorMessage"></app-error-message>
+        <app-error-message
+          *ngIf="errorMessage"
+          [message]="errorMessage"
+        ></app-error-message>
 
         <ion-list lines="none" *ngIf="!errorMessage">
-          <ion-item detail button *ngFor="let city of cities" (click)="onSelect(city)">
+          <ion-item
+            detail
+            button
+            *ngFor="let city of cities"
+            (click)="onSelect(city)"
+          >
             <ion-label>
               <h2>{{ city.name }}</h2>
               <ion-text color="primary">
@@ -26,7 +37,6 @@
               </ion-text>
             </ion-label>
           </ion-item>
-
         </ion-list>
       </ion-col>
     </ion-row>
