--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,20 +1,26 @@
 ion-searchbar {
-    --box-shadow: none;
+  --box-shadow: none;
+  width: calc(100% - 95px);
 }
 
 ion-grid,
 ion-row {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .temperature {
-    text-align: center;
-    font-weight: bold;
-    font-size: 3.6em;
+  text-align: center;
+  font-weight: bold;
+  font-size: 3.6em;
+}
+ion-col {
+  position: relative;
 }
 
 ion-button {
-    --box-shadow: none;
-    width: 200px;
+  position: absolute;
+  top: 12px;
+  right: 10px;
+  width: 90px;
 }
